# BioSig

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: benchmark_advantages.py  compare_methods.py  plot_compression.py  plot_core_encoding_insight.py  plot_delta_dist.py  plot_seek_latency.py  plot_signal_preview.py
biosig/: __init__.py  cli.py  convert.py  core.py  edf.py  hypnogram.py  metrics.py  plotting.py
examples/: basic_usage.py
figures/: advantage_table.csv  comparison.csv
scripts/: run_all_figures.py
tests/: test_cli.py  test_core.py
