[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biosig"
version = "0.1.0"
description = "A delta-encoded binary format for physiological time-series."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "biosig contributors"}]
dependencies = [
    "numpy>=1.23",
    "pyedflib>=0.1.38",
]

[project.optional-dependencies]
bench = [
    "matplotlib>=3.7",
    "pandas>=2.0",
    "h5py>=3.8",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
biosig = "biosig.cli:main"

[tool.setuptools.packages.find]
include = ["biosig*"]
